feat: Make navigation logo clickable, implement a fully responsive gallery layout, and add mobile-specific styling for the logo grid.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
 
     <nav>
-        <div class="logo"><img src="Resources/Company Logo/Company-Logo.jpeg"> MEHUL MOTORS</div>
+        <div class="logo"><a href="index.html"><img src="Resources/Company Logo/Company-Logo.jpeg"></a> MEHUL MOTORS</div>
         <ul>
             <li><a href="index.html">Home</a></li>  
             <li><a href="about.html">About</a></li>
