--- a/about.html
+++ b/about.html
@@ -17,8 +17,7 @@
 
     <!-- NAVBAR -->
     <nav>
-        <div class="logo"><img src="Resources/Company Logo/Company-Logo.jpeg"> MEHUL MOTORS</div>
-
+        <div class="logo"><a href="index.html"><img src="Resources/Company Logo/Company-Logo.jpeg"></a> MEHUL MOTORS</div>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
@@ -61,7 +60,7 @@
     </div>
     <div class="logo-grid">
         <!-- Replace with your own images -->
-<img src="Resources/Logos/Bajaj-logo.png">
+<img src="Resources/Logos/Bajaj-Logo.png">
 <img src="Resources/Logos/Hero-Logo.png">
 <img src="Resources/Logos/Honda-Logo.png">
 <img src="Resources/Logos/KTM-Logo.png">
