--- a/contact.html
+++ b/contact.html
@@ -16,8 +16,7 @@
 
     <!-- NAVBAR -->
     <nav>
-        <div class="logo"><img src="Resources/Company Logo/Company-Logo.jpeg"> MEHUL MOTORS</div>
-
+        <div class="logo"><a href="index.html"><img src="Resources/Company Logo/Company-Logo.jpeg"></a> MEHUL MOTORS</div>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
