Added the and more imag

--- a/about.html
+++ b/about.html
@@ -71,6 +71,7 @@
 <img src="Resources/Logos/Aprilia-Logo.png">
 <img src="Resources/Logos/Kawasaki-Logo.png">
 <img src="Resources/Logos/Jawa-Logo.png">
+<img src ="Resources/Logos/and more.png">
 
     </div>
     </main>
