--- a/contact.html
+++ b/contact.html
@@ -39,8 +39,13 @@
                 <h3 class="contact-title">Office Address</h3>
 
                 <p class="contact-text">
-                    New No. 267, Old No 135, Triplicane High Rd Narayana Krishnaraja Puram,<br>
-                    Triplicane Chennai, Tamil Nadu 600005
+                    <a class="contact-page-link" 
+  href="https://www.google.com/maps/search/?api=1&query=New+No.+267,+Old+No+135,+Triplicane+High+Rd,+Chennai+600005" 
+  target="_blank">
+    New No. 267, Old No 135, Triplicane High Rd  
+    Narayana Krishnaraja Puram,  
+    Triplicane, Chennai, Tamil Nadu 600005
+</a>
                 </p>
             </div>
 
@@ -51,7 +56,7 @@
 
                 <p class="contact-text">We're Just a Call Away!</p>
 
-                <a class="phone-link" href="tel:+917824040400">+917824040400</a>
+                <a class="contact-page-link" href="tel:+917824040400">+917824040400</a>
             </div>
 
         </div>
