V 1.1 Add whatsapp link Upt the hero size banners

--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 
     <!-- TOP BAR -->
     <div class="top-bar">
-        Working hours: Monday–Saturday : 9am–8:30pm, Sunday : 9am-2pm | +91 78240 40400
+        Working hours: Monday–Saturday : 9am–8:30pm, Sunday : 9am-2pm 
     </div>
 
     <!-- NAVBAR -->
