--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 <body>
 
     <!-- TOP BAR -->
-    <div class="top-bar">Working hours: Monday–Saturday : 9am–8:30pm, Sunday : 9am-2pm | +91 78240 40400
+    <div class="top-bar">Working hours: Monday–Saturday : 9am–8:30pm, Sunday : 9am-2pm 
     </div>
 
     <!-- NAVBAR -->
@@ -32,22 +32,16 @@
         <h1 class="contact-heading">Contact Us</h1>
 
         <div class="contact-grid">
-
-            <!-- Address Card -->
+        <!-- Whatsapp Card -->
             <div class="contact-card">
-                <div class="contact-icon">📍</div>
-                <h3 class="contact-title">Office Address</h3>
+                <div class="contact-icon">💬</div>
+                <h3 class="contact-title">Whatsapp</h3>
 
                 <p class="contact-text">
-                    <a class="contact-page-link" 
-  href="https://www.google.com/maps/search/?api=1&query=New+No.+267,+Old+No+135,+Triplicane+High+Rd,+Chennai+600005" 
-  target="_blank">
-    New No. 267, Old No 135, Triplicane High Rd  
-    Narayana Krishnaraja Puram,  
-    Triplicane, Chennai, Tamil Nadu 600005
-</a>
+                   <a class="contact-page-link" href="https://wa.me/917824040400" target="_blank">Chat on WhatsApp</a>
                 </p>
-            </div>
+        </div>
+
 
             <!-- Call Card -->
             <div class="contact-card">
@@ -58,7 +52,21 @@
 
                 <a class="contact-page-link" href="tel:+917824040400">+917824040400</a>
             </div>
+            <!-- Address Card -->
+            <div class="contact-card">
+                <div class="contact-icon">📍</div>
+                <h3 class="contact-title">Office Address</h3>
 
+                <p class="contact-text">
+                    <a class="contact-page-link" 
+                        href="https://www.google.com/maps/search/?api=1&query=New+No.+267,+Old+No+135,+Triplicane+High+Rd,+Chennai+600005" 
+                        target="_blank">
+                            New No. 267, Old No 135, Triplicane High Rd  
+                            Narayana Krishnaraja Puram,  
+                            Triplicane, Chennai, Tamil Nadu 600005
+                    </a>
+                </p>
+            </div>
         </div>
 
     </div>
