--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <div class="top-bar">
-        Working hours: Monday–Saturday : 9am–8:30pm, Sunday : 9am-2pm | +91 78240 40400
+        Working hours: Monday–Saturday : 9am–8:30pm, Sunday : 9am-2pm 
     </div>
 
     <nav>
@@ -27,22 +27,22 @@
         <div class="contact-btn"><a href="contact.html">Contact</a></div>
     </nav>
 
-    <div class="hero-slider" id="hero-slider">
+        <div class="hero-slider" id="hero-slider">
         <div class="hero-slides">
-            <div class="hero-slide active" style="background-image: url('Resources/Banner imgs/Banner-1.jpg');"></div>
-            <div class="hero-slide" style="background-image: url('Resources/Banner imgs/Banner-2.jpg');"></div>
-            <div class="hero-slide" style="background-image: url('Resources/Banner imgs/Banner-3.jpg');"></div>
+            <div class="hero-slide slide-1 active"></div>
+            <div class="hero-slide slide-2"></div>
+            <div class="hero-slide slide-3"></div>
         </div>
 
-        <button class="hero-arrow prev" id="hero-prev">❮</button>
-        <button class="hero-arrow next" id="hero-next">❯</button>
+        <button class="hero-arrow prev" id="hero-prev">&lt;</button>
+        <button class="hero-arrow next" id="hero-next">&gt;</button>
 
         <div class="hero-dots" id="hero-dots">
             <div class="hero-dot active" data-index="0"></div>
             <div class="hero-dot" data-index="1"></div>
             <div class="hero-dot" data-index="2"></div>
         </div>
-    </div>
+        </div>
 
     <section class="section">
         <h2>About Mehul Motors</h2>
